--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: Square;
+  src: url('../assets/fonts/Square.ttf');
+  font-weight:400;
+  font-weight:normal;
+}
+
 body {
   margin: 0;
   padding: 0;
